# Fast_FP_Pico_NEAT

./: .gitattributes  CMakeLists.txt  LICENSE.txt  README.md  build.sh
src/: main.c
src/include/neat/: neat.h
src/include/usb/: data_parser.h  protocol.h  serial.h
src/neat/: neat.S  neat_tables.S
src/usb/: descriptor.c  parse_data.c  protocol.c  serial.c
